# Bilanca

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
bilanca/: __init__.py  auth.py  config.py  db.py  main.py  models.py  seed.py
bilanca/categorize/: __init__.py  defaults.py  rules.py  suggest.py
bilanca/ingest/: __init__.py  base.py  csv_import.py  dedup.py  enablebanking.py  enablebanking_source.py  gocardless.py  gocardless_source.py  importer.py
bilanca/ingest/profiles/: __init__.py  nkbm.py
bilanca/insights/: __init__.py  recurring.py  stats.py  trends.py
bilanca/web/: __init__.py  routes.py
bilanca/web/static/: style.css
bilanca/web/templates/: base.html  categorize_suggestions.html  connect.html  import.html  index.html  login.html  register.html  stats.html  subscriptions.html  transactions.html
scripts/: seed_demo.py
tests/: conftest.py  test_auth.py  test_categorize.py  test_csv_import.py  test_dedup.py  test_enablebanking_source.py  test_gocardless_source.py  test_recurring.py  test_stats.py  test_suggest.py  test_trends.py
